--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -1,281 +1,291 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Trampa Clean</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>TrampaClean - Registro</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
 
 :root{
---blue:#0E2644;
---blue2:#103051;
---orange:#FF4A00;
---bg:#F3F8FF;
---text:#0B1B33;
---muted:#55637c;
+--navy:#061A2D;
+--navy2:#0A2A4A;
+--navy3:#0F3B6A;
+--text:#0b1b2a;
+--muted:#5b6672;
+--ease:cubic-bezier(.22,1,.36,1);
 }
 
 *{margin:0;padding:0;box-sizing:border-box;}
 
 body{
 
-font-family:system-ui,-apple-system,Segoe UI,Roboto;
-
-min-height:100vh;
+font-family:'Open Sans';
 
 background:
 
-radial-gradient(800px 500px at 20% 10%,rgba(14,38,68,.08),transparent),
+linear-gradient(135deg,#f7fbff,#eef4ff);
 
-radial-gradient(700px 500px at 90% 30%,rgba(255,74,0,.08),transparent),
+overflow-x:hidden;
 
-linear-gradient(180deg,#fff,var(--bg));
+}
+
+.container{
+
+min-height:100vh;
 
 display:flex;
 
-justify-content:center;
+flex-direction:column;
 
-}
+/* antes centraba verticalmente y cortaba */
 
-.wrap{
-
-width:min(520px,92vw);
-
-padding:24px 0 40px;
-
-}
-
-.card{
-
-background:rgba(255,255,255,.65);
-
-backdrop-filter:blur(22px);
-
-border-radius:26px;
-
-box-shadow:0 30px 80px rgba(0,0,0,.12);
-
-overflow:hidden;
-
-}
-
-/* HEADER */
-
-.top{
-
-background:linear-gradient(180deg,var(--blue2),var(--blue));
-
-padding:26px 18px 20px;
-
-text-align:center;
-
-color:white;
-
-}
-
-.logoBox{
-
-width:220px;
-
-height:90px;
-
-margin:auto;
-
-display:flex;
+justify-content:flex-start;
 
 align-items:center;
 
-justify-content:center;
+padding:24px;
+
+overflow:visible;
 
 }
 
-.logoBox img{
 
-max-width:100%;
+.card{
 
-max-height:100%;
+width:100%;
 
-object-fit:contain;
+max-width:30rem;
+
+background:white;
+
+border-radius:22px;
+
+box-shadow:0 24px 60px rgba(0,0,0,.14);
+
+overflow:visible;
 
 }
 
-/* CONTENT */
 
-.content{
+/* HEADER */
+
+.header{
+
+background:
+
+linear-gradient(135deg,var(--navy),var(--navy2),var(--navy3));
 
 padding:24px;
 
 text-align:center;
 
+color:white;
+
 }
 
-.content h2{
+.brand-logo{
 
-font-size:22px;
+width:260px;
+
+margin:auto;
+
+display:block;
 
 margin-bottom:12px;
 
 }
 
-.content p{
 
-font-size:14px;
+.form-section{
 
-color:var(--muted);
-
-line-height:1.5;
+padding:22px;
 
 }
 
-/* CTA */
+.form-group{
 
-.ctaWrap{
-
-padding:0 24px 24px;
+margin-bottom:14px;
 
 }
 
-.cta{
+label{
 
-display:flex;
+font-weight:700;
 
-justify-content:center;
-
-align-items:center;
-
-padding:16px;
-
-border-radius:18px;
-
-background:linear-gradient(135deg,var(--orange),#ff7a40);
-
-color:white;
-
-text-decoration:none;
-
-font-weight:800;
-
-text-transform:uppercase;
-
-letter-spacing:.05em;
-
-box-shadow:0 18px 50px rgba(255,74,0,.35);
-
-transition:.2s;
-
-}
-
-.cta:hover{
-
-transform:translateY(-2px);
-
-}
-
-/* LINKS */
-
-.links{
-
-display:grid;
-
-gap:12px;
-
-padding:16px;
-
-}
-
-.link{
-
-display:flex;
-
-align-items:center;
-
-gap:14px;
-
-padding:16px;
-
-border-radius:18px;
-
-background:rgba(255,255,255,.7);
-
-backdrop-filter:blur(16px);
-
-text-decoration:none;
-
-color:var(--text);
-
-box-shadow:0 12px 30px rgba(0,0,0,.08);
-
-transition:.2s;
-
-}
-
-.link:hover{
-
-transform:translateY(-3px);
-
-}
-
-/* ICON IMAGES */
-
-.icon{
-
-width:40px;
-
-height:40px;
-
-display:flex;
-
-align-items:center;
-
-justify-content:center;
-
-}
-
-.icon img{
-
-width:100%;
-
-height:100%;
-
-object-fit:contain;
-
-}
-
-.text b{
+font-size:.9rem;
 
 display:block;
 
-font-size:15px;
+margin-bottom:8px;
 
 }
 
-.text span{
+input{
 
-font-size:13px;
+width:100%;
 
-color:var(--muted);
+height:50px;
+
+border-radius:14px;
+
+border:1px solid rgba(6,26,45,.12);
+
+padding:12px;
+
+font-size:1rem;
 
 }
+
+
+.custom-select{
+
+position:relative;
+
+}
+
+.select-display{
+
+height:52px;
+
+display:flex;
+
+align-items:center;
+
+justify-content:space-between;
+
+padding:0 16px;
+
+border-radius:14px;
+
+border:1px solid rgba(6,26,45,.12);
+
+cursor:pointer;
+
+background:white;
+
+}
+
 
 .arrow{
 
-margin-left:auto;
+width:10px;
 
-opacity:.5;
+height:10px;
+
+border-right:2px solid var(--navy);
+
+border-bottom:2px solid var(--navy);
+
+transform:rotate(45deg);
 
 }
 
-/* CONTACT */
 
-.contactFooter{
+/* ⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐ */
+/* DROPDOWN FIX FINAL */
+/* ⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐ */
 
-padding:10px 16px;
+.options{
 
-display:grid;
+position:absolute;
 
-gap:12px;
+top:100%;
+
+left:0;
+
+width:100%;
+
+background:white;
+
+border-radius:14px;
+
+box-shadow:0 20px 50px rgba(0,0,0,.15);
+
+/* IMPORTANTE */
+
+max-height:0;
+
+opacity:0;
+
+overflow:hidden;
+
+transition:.3s var(--ease);
+
+z-index:999;
+
+}
+
+
+/* ABIERTO */
+
+.options.open{
+
+max-height:300px;
+
+/* scroll interno */
+
+overflow-y:auto;
+
+-webkit-overflow-scrolling:touch;
+
+opacity:1;
+
+}
+
+.option{
+
+padding:14px;
+
+cursor:pointer;
+
+}
+
+.option:hover{
+
+background:#f1f6ff;
+
+}
+
+
+
+.submit-btn{
+
+width:100%;
+
+height:54px;
+
+border:none;
+
+border-radius:16px;
+
+color:white;
+
+font-weight:800;
+
+letter-spacing:.05em;
+
+cursor:pointer;
+
+background:
+
+linear-gradient(135deg,var(--navy),var(--navy3));
+
+}
+
+
+.footer{
+
+padding:18px;
+
+font-size:.8rem;
+
+text-align:center;
+
+color:var(--muted);
 
 }
 
@@ -285,164 +295,162 @@ gap:12px;
 
 <body>
 
-<div class="wrap">
+<div class="container">
 
-<section class="card">
+<div class="card">
 
-<div class="top">
+<div class="header">
 
-<div class="logoBox">
+<img src="TCLOGO.png" class="brand-logo">
 
-<img src="TCLOGO.png">
+<h2>Regístrate</h2>
+
+<p>Soluciones profesionales de limpieza</p>
+
+</div>
+
+
+<form class="form-section">
+
+<div class="form-group">
+
+<label>Nombre *</label>
+
+<input placeholder="Tu nombre">
+
+</div>
+
+<div class="form-group">
+
+<label>Email *</label>
+
+<input type="email" placeholder="tu@email.com">
+
+</div>
+
+
+<div class="form-group custom-select">
+
+<label>Servicios de interés</label>
+
+
+<div id="customDisplay" class="select-display">
+
+<span id="selectedText">
+
+Selecciona un servicio
+
+</span>
+
+<div class="arrow"></div>
+
+</div>
+
+
+<div id="customOptions" class="options">
+
+
+<div class="option">
+
+Limpieza de Trampa de Grasa
+
+</div>
+
+<div class="option">
+
+Biodrexa FOG
+
+</div>
+
+<div class="option">
+
+Destape de tuberías
+
+</div>
+
+<div class="option">
+
+Auditorías Técnicas
+
+</div>
+
+<div class="option">
+
+Instalación de Trampa
+
+</div>
+
+<div class="option">
+
+Limpieza Campana cocina
 
 </div>
 
 </div>
 
-<div class="content">
+</div>
 
-<h1>Evita emergencias, olores y sanciones  en tu cocina</h1>
+
+<button class="submit-btn">
+
+Registrarme
+
+</button>
+
+</form>
+
+<div class="footer">
+
+Tus datos están protegidos.
 
 </div>
 
-<div class="ctaWrap">
-
-<a class="cta"
-
-href="https://nexcard-dev.github.io/NEXCARD/Wudpsdfohdq/form?empresa_id=trampaclean&vendedor=trampaclean"
-
-target="_blank">
-
-OBTEN TU 25% DE DESCUENTO
-
-</a>
+</div>
 
 </div>
 
-</section>
+<script>
 
-<section class="links">
+const display=document.getElementById("customDisplay");
 
-<a class="link" href="https://trampaclean.com" target="_blank">
+const options=document.getElementById("customOptions");
 
-<div class="icon">
-
-<img src="web.png">
-
-</div>
-
-<div class="text">
-
-<b>Visita nuestra web</b>
-
-<span>trampaclean.com</span>
-
-</div>
-
-<div class="arrow">›</div>
-
-</a>
+const text=document.getElementById("selectedText");
 
 
-<a class="link"
+display.onclick=()=>{
 
-href="https://wa.me/50763515950?text=Hola%20Trampa%20Clean%20vengo%20de%20la%20expo"
+options.classList.toggle("open");
 
-target="_blank">
-
-<div class="icon">
-
-<img src="whatsapp.png">
-
-</div>
-
-<div class="text">
-
-<b>Contáctanos</b>
-
-<span>WhatsApp directo</span>
-
-</div>
-
-<div class="arrow">›</div>
-
-</a>
+}
 
 
-<a class="link"
+document.querySelectorAll(".option")
 
-href="https://instagram.com/trampaclean"
+.forEach(opt=>{
 
-target="_blank">
+opt.onclick=()=>{
 
-<div class="icon">
+text.textContent=opt.textContent;
 
-<img src="instagram.png">
+options.classList.remove("open");
 
-</div>
+}
 
-<div class="text">
-
-<b>Conócenos</b>
-
-<span>@trampaclean</span>
-
-</div>
-
-<div class="arrow">›</div>
-
-</a>
-
-</section>
+})
 
 
-<!-- CONTACTO -->
+document.addEventListener("click",e=>{
 
-<section class="contactFooter">
+if(!display.contains(e.target)
 
-<a class="link" href="tel:3991156">
+&&!options.contains(e.target))
 
-<div class="icon">
+options.classList.remove("open");
 
-<img src="telefono.png">
+})
 
-</div>
-
-<div class="text">
-
-<b>Llámanos</b>
-
-<span>399-1156</span>
-
-</div>
-
-</a>
-
-
-<a class="link" href="mailto:info@trampaclean.com">
-
-<div class="icon">
-
-<img src="email.png">
-
-</div>
-
-<div class="text">
-
-<b>Correo electrónico</b>
-
-<span>info@trampaclean.com</span>
-
-</div>
-
-</a>
-
-</section>
-
-</div>
+</script>
 
 </body>
-
 </html>
-
-
